--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="80" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="80" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="2Bmos1vZiWeLpftwcqYhT/Ur/mgMLEDNVOT8sp00EMhlXP0FBOrW0H2TK0J3FEmi4MIWik30z8KXQ+QJJys1l+GmUMJQ0AQ/UjDrIU7FiPELZv0dRNJIKmU8KGfqMiJ9" data-form-email="true">
+                                <input type="hidden" value="W8nasnlXhbttu9BcdzB6E+kLXkWXMsi2iuCaIUM/IEDyeCzFYIKmbpZqtaHOA3cmx3KhY/XOmfVgyRkM5w8GSAy8GNZHDNMJPKBeWYO3wgCwKcJnhw4JnYBOUqatyCbL" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
