--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -248,7 +248,7 @@
         <div class="lead"><div><span style="font-size: 1.07rem;">GETModer是一家专注于加密数字货币贷款和加密数字货币交换站/ 中心的机构混合型区块链技术公司。我们开发了以太坊网络支持的高度可扩展，安全，许可和商业级平台架构。</span></div><div>
 </div><div><br></div><div><span style="font-size: 1.07rem;">GETModer生态系统管理团队和开发商已决定采用区块链众筹机制初始代币发售（ITO）来支持和资助我们未来的加密数字货币项目</span></div><div><span style="font-size: 1.07rem;"><br></span></div><div><span style="font-size: 1.07rem;">最初的代币发行或ITO是投资者参与我们的加密数字货币项目的切入点。</span></div><div><br></div><div>
 </div><div>
-</div><div>在ITO活动期间将产生总计2.51亿个GTMR（ERC20）代币，其中<span style="font-size: 1.07rem;">1.5亿代币可用于公众投资者，开发团队将持有1亿代币。1 百万&nbsp;</span><span style="font-size: 1.07rem;">GTMR 代币将保留给赏金计划。总共众筹目标设定为2000万美元。任何未售出的代币将在ITO活动结束后被烧毁。 ITO贡献的通用货币仅限 ETHER (以太币)。最小贡献为0.1 ETHER(以太币)。最大贡献 20 ETH (以太币)</span></div><div><br></div><div>GETModer ITO Event 将分为2个阶段，</div><div>1) Early Bird(初期预售)</div><div>2) Pre-ITO(预售)和 ITO</div><div><br></div><div>Early Bird (初期预售)官方贡献活动将于2018年4月15日开始，并于2018年7月15日结束。</div><div><br></div><div>GTMR代币将被列入次要和主要加密货币交易所。包括LiveCoin， Ku Coin，Poloniex，Binance，Bittrex，HITBTC，CoinExchange
+</div><div>在ITO活动期间将产生总计2.51亿个GTMR（ERC20）代币，其中<span style="font-size: 1.07rem;">1.5亿代币可用于公众投资者，开发团队将持有1亿代币。1 百万&nbsp;</span><span style="font-size: 1.07rem;">GTMR 代币将保留给赏金计划。总共众筹目标设定为12,500 ETHER。ITO活动结束后, 任何未售出的代币, GETModer平台将保留任何未售出的代币用于贷款库存目的。 ITO贡献的通用货币仅限 ETHER (以太币)。最小贡献为0.1 ETHER(以太币)。最大贡献 20 ETH (以太币)</span></div><div><br></div><div>GETModer ITO Event 将分为2个阶段，</div><div>1) Early Bird(初期预售)</div><div>2) Pre-ITO(预售)和 ITO</div><div><br></div><div>Early Bird (初期预售)官方贡献活动将于2018年4月15日开始，并于2018年7月15日结束。</div><div><br></div><div>GTMR代币将被列入次要和主要加密货币交易所。包括LiveCoin， Ku Coin，Poloniex，Binance，Bittrex，HITBTC，CoinExchange
 </div><div>，Gate IO等。确切上市到交易平台的时间表将在 ITO 完成后发布。</div><div><br></div><div>
 </div><div><strong>代币定价
 </strong></div><div>预计首次上市价格将约为 0.12 美元
