--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -445,7 +445,7 @@
 </p><p>资不足问题的答案/解决方案。</p><p><br></p><p><strong>GETModer生态系统包括：</strong>
 </p><p>a）加密数字货币的借贷
 </p><p>b）加密数字货币的即时兑换站</p><p><strong><br></strong></p><p>实用程序代币：GETModer
-</p><p>区块链：以太坊符 号 ：GTMR 总计：2.51亿
+</p><p>区块链：以太坊符 号</p><p>GTMR 总计：2.51亿
 </p><p>交场流通发售：1.5亿</p><p><br></p><p><strong>A）无边界加密数字货币融资</strong>
 </p><p>这个问题已经明显的浮现了一段时间- 今天卖及消费/使用密码资产
 </p><p>
@@ -454,7 +454,7 @@
 </strong></div><div><strong><br></strong></div><div><strong>对于借款人：</strong>GETModer平台允许您根据您的加密货币资产所持有的当前价值进行流动资金的即时借款。你可拿到一笔贷款，用比特币或以太币等资产进行抵押 - 并以此获得一笔稳定货币的商业贷款。偿还贷款后，你便收到你的全部抵押品;即使抵押品己经增值多次。这样，您就可以获得流动资金以满足当前的需求，并且可以在高贷款率的同时拥有同样的数字货币。</div><div><br></div><div><strong>对于贷款人：</strong>借贷机会开放给全球市场/希望成为贷款人的任何人开放。我们保证全额还款和无风险，因为所有贷款都有借款人的加密数字货币资产为担保。</div><div><br></div><div><strong>奖励措施：</strong>我们的加密数字货币项目的参与者（请参阅下面的&nbsp;<span style="font-size: 1.07rem;">GETModer ITO）将享有贷款和借款的特殊费率。</span></div><div>
 </div><div><strong><br></strong></div><div><strong>利润目标：</strong>贷款和借款的手续费目标：每天120万美元的融资额</div><div><strong></strong></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><br></div><div>
 </div><div>
-</div><div><strong>B)&nbsp;</strong><strong>即时加密数字货币兑换站</strong></div><div><strong></strong><br></div><div>我们的即时钱包与钱包交换允许您交换加密数字货币，无需在任何交易所注册或需要验证。总公司已有超过700,000名客户，每月处理超过50,000 BTC。我们的平台与Jaxx, Coinmarketcap，Bittrex
+</div><div><strong>B)&nbsp;</strong><strong>即时加密数字货币兑换站</strong></div><div>我们的即时钱包与钱包交换允许您交换加密数字货币，无需在任何交易所注册或需要验证。总公司已有超过700,000名客户，每月处理超过50,000 BTC。我们的平台与Jaxx, Coinmarketcap，Bittrex
 <span style="font-size: 1.07rem;">，Coinpayments，Uquid借记卡，Coinomi和其他知名公司合作。提供各种加密数字货币交易使该平台特别具有吸引力。它创造了一个以极少的麻烦交换任何两种货币的方便。传统的加密货币交易平台通常对交易配对的选择范围有限，这意味着有时用户必须进行多笔交易才能收到他们想要的加密货币。现金货币应用功能与信用卡和借记卡的购买功能将被添加到我们的交易所，以便大家应用。&nbsp;</span></div><div>
 </div><div><br></div><div><strong>奖励措施：</strong>根据对加密货币交易的深入技术分析，我们将提供最有利可图的免费交易信号。因此，鼓励大众用户使用我们的交换平台<span style="font-size: 1.07rem;">，毕竟这是个免费信息。</span></div><div><span style="font-size: 1.07rem;"></span><br></div><div><strong>我们的利润：</strong>加密数字货币转换/兑换站/中心交易费用
 </div><div><br></div><div><strong>目标：</strong>每天1亿美元的交换量。该货币兑换所赚取的收入的60％将用于回购在市场上流通的GTMR代币，以资助我们的贷款平台。</div><p></p></div>
@@ -495,8 +495,8 @@
 
                         <small class="feature-subtitle"></small>
 
-                        <p class="description">加密数字货币的融资与传统融资相比(个人和中小企业)的融资市场无边界相比之下，显
-<br>得更加透明和流动。</p>
+                        <p class="description">加密数字货币的融资与传统融资相比(个人和中小企业)的融资市场界相比之下，显
+得更加透明和流动.</p>
 
                     </div>
 
@@ -512,7 +512,7 @@
                         <small class="feature-subtitle"></small>
 
                         <p class="description">大整合。我们的安全即时钱包与钱包交换允许您交易加密货币，无
-<br>需在任何交易所注册或需要验证。</p>
+<br>需在任何交易所注册或需要验证.</p>
 
                     </div>
                     <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6" style="color: rgb(255, 255, 255);"></span></div>
@@ -537,7 +537,7 @@
 
                         <small class="feature-subtitle"></small>
 
-                        <p class="description">处理迅速。</p>
+                        <p class="description">处理迅速.</p>
 
                     </div>
                 </div>
@@ -552,7 +552,7 @@
 
                         <small class="feature-subtitle"></small>
 
-                        <p class="description">我们的竞争优势体现在于我们拥有超过10年经验的业务知识 - 高效的商业模式，尖端的技术解决方案和富有远见的管理是我们长期成功的关键驱动因素</p>
+                        <p class="description">我们的竞争优势体现在于我们拥有超过10年经验的业务知识 - 高效的商业模式，尖端的技术解决方案和富有远见的管理是我们长期成功的关键驱动因素.</p>
 
                     </div>
                 </div>
