--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -79,7 +79,7 @@
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p><strong><span style="font-style: normal;">格摩</span>特</strong><span style="font-style: normal;"> (<strong>GETModer)&nbsp;</strong></span><br><span style="font-style: normal;"><strong>Early Birds Event&nbsp;</strong></span><strong> (初期预售)</strong><br><span style="font-style: normal;"><strong>代币首次發售</strong></span><span style="font-style: normal;"><strong><br>从2018年4月15日开始
+                            <p><span style="font-style: normal;"><strong>GETModer&nbsp;(格摩特)</strong></span><br><span style="font-style: normal;"><strong>Early Birds Event&nbsp;</strong></span><strong> (初期预售)</strong><br><span style="font-style: normal;"><strong>代币首次發售</strong></span><span style="font-style: normal;"><strong><br>从2018年4月15日开始
 <br>2018年7月15日结束
 <br>1 ETH = 6,000 GTMR代币
 <br>最低贡献 0.1 ETH (以太币)
